[tool.poetry]
name = "lechuga"
version = "0.1.0"
description = ""
authors = ["teosibileau <teo.sibileau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.88888888"
click = "^8.1.3"
requests = "^2.31.0"
requests-cache = "^1.0.1"
colorama = "^0.4.6"
tabulate = "^0.9.0"
simplejson = "^3.19.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
poetry-setup = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
