[tool.poetry]
name = "lechuga"
version = "0.4"
description = "retrieves AR$ rates from fixer.io API"
authors = ["Teofilo Sibileau <teo.sibileau@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lechuga"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/teosibileau/lechuga"
"Repository" = "https://github.com/teosibileau/lechuga"
"Bug Tracker" = "https://github.com/teosibileau/lechuga/issues"

[tool.poetry.scripts]
lechuga = "lechuga.lechuga:run"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0,<9"
requests = ">=2.28,<3"
requests-cache = ">=1.0,<2"
colorama = ">=0.4,<1"
tabulate = ">=0.9,<1"
simplejson = ">=3.19,<4"
python-dotenv = "^1.2.2"
pydantic = "^2.12.5"
tenacity = "^9.1.4"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "^0.13.13"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
